Tests/Negative/UseBeforeDeclaration.mr
fun main(): i32 {
    x = 10; // Error: Use of undeclared identifier 'x'
    var x: i32;
    return 0;
}
